docs: auditoría completa de documentación contra código real (sesión 39)
CHANGELOG.md estaba congelado en v8.3.0 (2026-06-18) sin ninguno de los 11
commits reales posteriores (seguridad, features, fixes). Se agrega sección
'Sin publicar aún' con las 3 categorías (seguridad/confiabilidad/features)
detalladas commit por commit.

ARQUITECTURA.md estaba congelado desde 2026-04-05 (v7.5.0/7.7.0) y tenía
contenido directamente inventado: árbol de directorios con carpeta v7/
envolvente inexistente, docs/PENDIENTES.md y otros 3 archivos que no existen,
repo URL incorrecta (beteliney/BetelineyLauncher en vez de ElPibeCapo/...),
6 perfiles JVM en vez de 7 (faltaba ZGC), 47 tests Beteliney-specific en vez
de 6 reales. Reescrito contra el código real, con nota explícita de qué se
corrigió y por qué. Se agregan los módulos nuevos de sesiones 30-39
(Achievements, BubblewrapSandbox, CommandPalette, FavoriteServers, firma
Ed25519) que nunca se documentaron.

PERFILES_JVM.md: se completa la sección de flags de ZGC (perfil MEJ-6,
existía en BetelineyProfiles.h pero sin documentar) — verificado contra el
código antes de escribir, sin inventar benchmarks que no existen.

README.md: versión 8.3.0 -> 8.4.0, features reales de sesiones 30-38 movidas
de 'ideas futuras' a 'ya implementadas', ejemplo de git tag corregido para no
reusar v8.3.0/v8.4.0.

ESTADO.md: la tabla IDENTIDAD prometía que '## HISTORIAL DE COMMITS' tenía
el último hash real en main -- ese bloque estaba congelado desde ~sesión 17.
Corregido: git log --oneline queda como fuente de verdad explícita, el
bloque se deja como snapshot histórico + puntero corto a los commits reales
recientes (sesiones 27-39).

Todo verificado contra el código fuente antes de escribir (test counts,
tools/dev/, hook de Achievements en BaseInstance.cpp, número de sesión del
fix de GDLauncher) -- no se documentó nada sin confirmar primero.